--- a/desafios-kotlin/portifolio-projetos/app/src/main/res/values/strings.xml
+++ b/desafios-kotlin/portifolio-projetos/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Github Search</string>
+    <string name="title">GitHub Search</string>
+    <string name="bt_comfirmar">Comfirmar</string>
 </resources>
