fix: realizando ajustes no código

--- a/desafios-kotlin/portifolio-projetos/app/src/main/res/values/strings.xml
+++ b/desafios-kotlin/portifolio-projetos/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Github Search</string>
     <string name="title">GitHub Search</string>
     <string name="bt_comfirmar">Comfirmar</string>
+    <string name="user_name">User</string>
 </resources>
